  breaking change only to code which attempted to use the internal names before.
  The Standard Library generated by the Dune rules is now equivalent to the main
  build (the Dune rules still do not generate a distributable compiler).
  (David Allsopp and Mark Shinwell, review by Gabriel Scherer)

### Other libraries:

* #10084: Unix.open_process_args* functions now look up the program in the PATH.
  This was already the case under Windows, but this is now also done under
  Unix. Note that previously the program was interpreted relative to the current
  directory.
  (Nicolás Ojeda Bär, review by Gabriel Scherer and Xavier Leroy)

- #10184: Remove expensive debug assertion from dynlink.
  (Leo White, review by David Allsopp and Xavier Leroy)

- #10185: Consider that IPv6 is always enabled on Windows.
  (Antonin Décimo, review by David Allsopp and Xavier Leroy)

### Tools:

- #10139: Remove confusing navigation bar from stdlib documentation.
  Adds a -nonavbar option to ocamldoc, and uses it to improve navigation within
  the reference manual.
  (John Whitington, review by David Allsopp)

### Manual and documentation:

- #10247: Add initial tranche of examples to reference manual.
  Adds some eighty examples to the reference manual, principally to the
  expressions and patterns sections.
  (John Whitington, review by Xavier Leroy, Gabriel Scherer, @Fourchaux, and
  Florian Angeletti)

- #9786, #10181: improved documentation of Unix.{in,out}_channel_of_descr
  with respect to closing.
  (Xavier Leroy, report by Jacques-Henri Jourdan, review by Guillaume
   Munch-Maccagnoni, Gabriel Scherer, Jacques-Henri Jourdan)

- #10139: Remove confusing navigation bar from stdlib documentation.
  Removes the 'Up', 'Previous' and 'Next' links from the top of each standard
  library module's documentation.
  (John Whitington, review by David Allsopp)

- #1351: Document `-output-complete-obj` option in the manual.