@@ -123,6 +123,9 @@ Working version
 
 ### Other libraries:
 
+- #XXXX Add `Unix.realpath`
+  (Daniel Bünzli, review by XXX)
+
 * #10084: Unix.open_process_args* functions now look up the program in the PATH.
   This was already the case under Windows, but this is now also done under
   Unix. Note that previously the program was interpreted relative to the current
